--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".CambiarPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".Editar_Perfil_Activity"
+            android:name=".EditarPerfilActivity"
             android:exported="false" />
         <activity
             android:name=".ChatActivity"
